# girahs-hsl3

./: .gitignore  README.md  generator.py  main.py  pyproject.toml
.examples/binary_trigger/: config_binary_trigger.json
.examples/communication_between_instances/: hsl3_10703_client.py
.examples/http_request/: hsl3_10701_http_request.py
.old/: generator3.cpython-39.old.py_failed
configs/: input.py  module.py  output.py  store.py  timer.py
examples/binary_trigger/: config_binary_trigger.json  hsl3_10700_binary_trigger.py
examples/communication_between_instances/: config_client.json  config_server.json  hsl3_10702_server.py  hsl3_10703_client.py
examples/http_request/: 10701_http_request.hsl  config_http_request.json  hsl3_10701_http_request.py
hsl_types/: __init__.py  input.py  output.py  store.py
parsers/: json.py  module.py
src/hsl3/: hsl3.py  hsl3_debug_section.py  hsl3_server.py  hsl3_slot.py  hsl3_slots.py  hsl3_wrapper.py
src/hsl3/hsl3_generator/: generator.py
src/hsl3/hsl3_generator/configs/: __init__.py  input.py  module.py  output.py  store.py
src/hsl3/hsl3_generator/hsl_types/: __init__.py  input.py  output.py  store.py
src/hsl3/hsl3_generator/parsers/: json.py  module.py
tests/: test_smoke.py
tests/examples/binary_trigger/: hsl3_10700_binary_trigger.py
tests/examples/communication_between_instances/: config_client.json  config_server.json  hsl3_10702_server.py
tests/examples/http_request/: config_http_request.json
types/: __init__.py  input.py  output.py  store.py
